add form, css, js

--- a/contacts.html
+++ b/contacts.html
@@ -37,13 +37,13 @@
  </section>
  <form id = "Contactform">
     <label for="name">Ваше имя:</label>
-    <input type = "text" id = "name" name = "name" required>
+    <input type = "text" id = "name" name = "name">
     <label for="phone">Ваш телефон:</label>
-    <input type = "text" id = "phone" name = "phone" placeholder = "+7-999-999-99-99" required>
-    <label for="email">Ваш телефон:</label>
-    <input type = "text" id = "email" name = "email" required>
+    <input type = "text" id = "phone" name = "phone" placeholder = "+7-999-999-99-99">
+    <label for="email">Ваш email:</label>
+    <input type = "text" id = "email" name = "email">
     <label for="cours">Ваш курс:</label>
-    <select id = "cours" name = "cours" required>
+    <select id = "cours" name = "cours">
         <option value="1">1 курс</option>
         <option value="2">2 курс</option>
         <option value="3">3 курс</option>
@@ -60,5 +60,7 @@
  <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
  <p>Телефон: +7 (123) 456-78-90</p>
  </footer>
+
 </body>
+ <script src="script.js"></script>
 </html>
