--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <title>Главная - Название вашего сайта</title>
  <meta name="description" content="Краткое описание главной страницы вашего сайта">
  <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+ <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
  <!-- Шапка сайта -->
@@ -23,6 +24,9 @@
  <!-- Уникальное основное содержимое страницы -->
  <main>
  <h1>Добро пожаловать на наш сайт!</h1>
+ <div class="media">
+    <iframe width="720" height="405" src="https://rutube.ru/play/embed/aab4488cc4cd8091c7c5c16641599797/" style="border: none;" allow="clipboard-write" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+ </div>
  <!-- Секция 1 с якорем -->
  <section id="services">
  <h2>Наши услуги</h2>
