--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
  <!-- Шапка сайта -->
  <header>
- <a href="/">Логотип или название сайта</a>
+ <a href="/" class="logo">
+  <img src="assets/favicon.ico" alt="Название" width="50" height="50">
+</a>
  <!-- Главное меню навигации -->
  <nav>
- <ul>
- <li><a href="index.html">Главная</a></li>
- <li><a href="about.html">О нас</a></li>
- <li><a href="contacts.html">Контакты</a></li>
+ <ul class="header__navigation">
+ <li><a class="header__navigation-item" href="index.html">Главная</a></li>
+ <li><a class="header__navigation-item" href="about.html">О нас</a></li>
+ <li><a class="header__navigation-item" href="contacts.html">Контакты</a></li>
  </ul>
  </nav>
  </header>
@@ -30,7 +32,9 @@
  <!-- Секция 1 с якорем -->
  <section id="services">
  <h2>Наши услуги</h2>
- <p>Описание предоставляемых услуг...</p>
+ <div>Кот</div>
+ <div>Кот</div>
+ <div>Кот</div>
  <a href="#contacts">Связаться с нами</a> <!-- Якорная ссылка внутри страницы -->
  </section>
  <!-- Секция 2 с якорем -->
