--- a/contacts.html
+++ b/contacts.html
@@ -10,30 +10,35 @@
 </head>
 <body>
  <header>
- <a href="/">Логотип или название сайта</a>
+ <a href="/" class="logo">
+  <img src="assets/favicon.ico" alt="Название" width="50" height="50">
+</a>
  <!-- Главное меню навигации -->
  <nav>
- <ul>
- <li><a href="index.html">Главная</a></li>
- <li><a href="about.html">О нас</a></li>
- <li><a href="contacts.html">Контакты</a></li>
+ <ul class="header__navigation">
+ <li><a class="header__navigation-item" href="index.html">Главная</a></li>
+ <li><a class="header__navigation-item" href="about.html">О нас</a></li>
+ <li><a class="header__navigation-item" href="contacts.html">Контакты</a></li>
  </ul>
  </nav>
  </header>
  <main>
  <!-- Простые "хлебные крошки" -->
- <nav aria-label="Хлебные крошки">
+ <nav class="bread-navigation" aria-label="Хлебные крошки">
  <a href="index.html">Главная</a> →
- <span>Контакты</span>
+ <span id="contacts.html">Контакты</span>
  </nav>
  <h1>Контакты</h1>
- <section>
+ <section id="contacts">
  <h2>Наши контакты</h2>
- <p>Текст о том, какие есть контакты...</p>
+ <p>Контакты...</p>
  </section>
- <section>
+ <section id="social-networks">
  <h2>Наши соц.сети</h2>
- <p>Текст о соц.сетях ...</p>
+ <p>
+  Вк<br>
+  Рутуб
+ </p>
  </section>
  <form id = "Contactform">
     <label for="name">Ваше имя:</label>
